# fragment-string-graph-assembler

./: COPYING  Makefile  Makefile.am  README  configure.ac
checkin/: Makefile  project-checkin.aux  project-checkin.tex  reads.fa
docs/: MATH469-slides.tex  MATH469-talk.txt  Makefile  capstone-slides.tex  capstone-talk.txt  example_200bp.fa  example_reads.fa  programs.dot
docs/checkin/: Makefile  genome.fa.64  project-checkin.aux
docs/hw6/: hw6.tex
hw6/: Assignment6.nb  Makefile
old-src/: Makefile  OutputStream.cpp  Read.h  SharedQueue.h  dna-util.h  parse-reads.cpp
presentation/: Makefile  outline.txt  paper.tex  presentation.tex  programs.dot  refs.bib  script.txt  venn.odg
src/: AnyStringGraph.h  BaseUtils.cc  BaseUtils.h  BaseVec.h  BaseVecVec.cc  BaseVecVec.h  BidirectedStringGraph.cc  BidirectedStringGraph.h  DirectedStringGraph.cc  DirectedStringGraph.h  Graph.cc  Graph.h  Kmer.h  Makefile  Makefile.am  OutputStream.h  Overlap.cc  Overlap.h  StringGraph.h  assemble.cpp  bidigraph-eulerian-cycle.cc  bidigraph-to-digraph.cc  build-bidirected-string-graph.cc  build-directed-string-graph.cc  build-graph.cc  calculate-A-statistics.cc  collapse-unbranched-paths.cc  compiler.h  compute-overlaps.cc  convert-reads.cc  digraph-to-bidigraph.cc  dna-util.h  extract-edge-seqs.cc  import_reads.cc  map-contained-reads.cc  min-cost-circulation.cc  print-graph.cc  print-overlaps.cc  print-string-graph.cc  remove-contained-reads.cc  (+4 more)
src/new/: Base.h  BaseUtils.h  BaseVec.h  BaseVecVec.h  Makefile  import_reads.cc  util.cc  util.h
src/old/: InputStream.cpp  InputStream.h  Lock.h  assemble.cpp  compiler.h  parse-reads.h  util.h
test/: Makefile  example_genome.fa  example_reads.fa  fasta_head.pl  gen_random_genome.pl  genome.fa.100000  genome.fa.50000  genome.fa.500000  genome.fasta  pirs_reads_100_180_1.fq  pirs_reads_100_180_2.fq  random_genome.fa  rep.fa  run-example.sh  simulate_uniform_reads.pl
